# embeddings-aws-circleci

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
lambda_function/: lambda_function.py
scripts/: build_deploy.sh  create_image.sh  create_lambda.sh  create_roles.sh
src/: create_collection.py  drop_collection.py  insert_documents.py
tests/: test_collection_exists.py  test_collection_mock.py  test_lambda.py  test_lambda_function.py
